kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organizationmanager
  namespace: backend
  labels:
    app: organizationmanager
spec:
  replicas: 1
  template:
    metadata:
      name: organizationmanager
      labels:
        app: organizationmanager
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8090"
        prometheus.io/path: "/organizationmanager/actuator/prometheus"
    spec:
      serviceAccountName: organizationmanager-account
      containers:
        - name: organizationmanager
          image: acr$(environment).azurecr.io/organizationmanager:$(tagVersion)
          imagePullPolicy: Always
          volumeMounts:
            - name: secret-mount
              mountPath: "/etc/secrets"
              readOnly: true
            - name: db-secret
              mountPath: "/etc/db-secret"
              readOnly: true
            - name: orgamanager-secret
              mountPath: "/etc/orgamanager-secret"
              readOnly: true
            - name: app-configuration
              mountPath: "/etc/application"
              readOnly: true
          resources:
            requests:
              memory: 512Mi
              cpu: 400m
            limits:
              memory: 768Mi
              cpu: 750m
          ports:
            - containerPort: 8090
              name: http
          readinessProbe:
            httpGet:
              path: /organizationmanager/actuator/health
              port: 8090
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 1
            successThreshold: 1
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: agentpool
                    operator: In
                    values:
                      - userpool
      volumes:
        - name: secret-mount
          secret:
            secretName: eventhub-secret
        - name: db-secret
          secret:
            secretName: coredb-secret
        - name: orgamanager-secret
          secret:
            secretName: organizationmanager-secret
        - name: app-configuration
          configMap:
            name: organizationmanager
      restartPolicy: Always
  selector:
    matchLabels:
      app: organizationmanager
