kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: organizationmanager$(postfix)
  namespace: backend
  annotations:
    boot.spring.io/actuator: http://:8090/organizationmanager/actuator
spec:
  selector:
    app: organizationmanager
  ports:
    - port: 8090
